--- a/resume-elegant.tex
+++ b/resume-elegant.tex
@@ -6,7 +6,7 @@
 \usepackage{zh_CN-Adobefonts_external} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobe/)
 %\usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
 \usepackage{linespacing_fix} % disable extra space before next section
-\usepackage{cite}
+\usepackage{cite} % bibliology
 
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
