--- a/resume-elegant.tex
+++ b/resume-elegant.tex
@@ -3,8 +3,8 @@
 % !Mode:: "TeX:UTF-8"
 
 \documentclass{resume}
-\usepackage{zh_CN-Adobefonts_external} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobe/)
-%\usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
+\usepackage{zh_CN-Adobefonts-External} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobefonts/)
+%\usepackage{zh_CN-Adobefonts-Internal} % Simplified Chinese Support using system fonts
 \usepackage{linespacing_fix} % disable extra space before next section
 \usepackage{cite} % bibliology
 
