add English version

--- a/resume-elegant-cn.tex
+++ b/resume-elegant-cn.tex
@@ -21,14 +21,14 @@
 %\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{}
  
 \section{\faGraduationCap\  教育背景}
-\datedsubsection{\textbf{西安电子科技大学}，陕西}{2014年\ --\ 至今}
+\datedsubsection{\textbf{西安电子科技大学}，陕西}{2014年 -- 至今}
 \textit{研究生在读}\ 电子与通信工程，预计 2017 年 6 月毕业
-\datedsubsection{\textbf{西安电子科技大学}，陕西}{2010年\ --\ 2014年}
+\datedsubsection{\textbf{西安电子科技大学}，陕西}{2010年 -- 2014年}
 \textit{学士}\ 通信工程
 
 \section{\faTrophy\ 获奖情况}
 \begin{onehalfspacing}
-\datedline{校学业奖学金一等奖，\textbf{专业均分:\ 90.29/100，排名:\ 3/265}}{2015年11月}
+\datedline{校学业奖学金一等奖，\textbf{专业均分: 90.29/100，排名: 3/265}}{2015年11月}
 \datedline{全国计算机等级考试四级网络工程师}{2012年12月}
 \datedline{大学生数模竞赛校一等奖}{2012年05月}
 \end{onehalfspacing}
@@ -43,7 +43,7 @@
 \end{itemize}
 
 \section{\faUsers\ 项目经历}
-\datedsubsection{\textbf{PTP-1588虚拟机对时系统}}{2015年9月\ --\ 至今}
+\datedsubsection{\textbf{PTP-1588虚拟机对时系统}}{2015年9月 -- 至今}
 \role{小组组长}{中船七〇九所项目}
 \setlength{\parindent}{2em}提高虚拟机时间同步精度
 \begin{onehalfspacing}
@@ -55,13 +55,13 @@
 \end{itemize}
 \end{onehalfspacing}
 
-\datedsubsection{\textbf{基于Fit AP架构的P2P即时通信定位系统}}{2015年4月\ --\ 2015年11月}
+\datedsubsection{\textbf{基于Fit AP架构的P2P即时通信定位系统}}{2015年4月 -- 2015年11月}
 \role{小组成员}{个人项目}
 \setlength{\parindent}{2em}实现移动端即时通信定位系统
 \begin{onehalfspacing}
 \begin{itemize}[leftmargin=5em]
   \item 基于Android平台，设计一款P2P即时通信系统，并集成室内定位模块。
-  \item 定位模块采用了两种定位方式，包括基于定位锚点的粗粒度定位和基于RSS信息的较细粒度定位。
+  \item 定位模块采用了两种定位方式，包括基于定位锚点的粗粒度定位和基于RSSI信息的较细粒度定位。
   \item 通信模块基于Android平台实现了P2P即时通信功能，为用户提供文字、语音、图片三种基本通信形式。
 \end{itemize}
 \end{onehalfspacing}
