--- a/resume-elegant-eng.tex
+++ b/resume-elegant-eng.tex
@@ -1,9 +1,10 @@
 % !TEX program = xelatex
 
 \documentclass{resume}
-%\usepackage{zh_CN-Adobefonts_external} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobe/)
-%\usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
-\usepackage{setspace}
+\usepackage{zh_CN-Adobefonts-External} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobefonts/)
+%\usepackage{zh_CN-Adobefonts-Internal} % Simplified Chinese Support using system fonts
+\usepackage{linespacing_fix} % disable extra space before next section
+\usepackage{cite} % bibliology
 
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
