replace a fontawesome icon

--- a/resume-elegant-cn.tex
+++ b/resume-elegant-cn.tex
@@ -22,9 +22,9 @@
  
 \section{\faGraduationCap\ 教育背景}
 \datedsubsection{\textbf{西安电子科技大学}，陕西}{2014年 -- 至今}
-\textit{研究生在读}\ 电子与通信工程，预计 2017 年 6 月毕业
+\textit{研究生在读} 电子与通信工程，预计 2017 年 6 月毕业
 \datedsubsection{\textbf{西安电子科技大学}，陕西}{2010年 -- 2014年}
-\textit{学士}\ 通信工程
+\textit{学士} 通信工程
 
 \section{\faTrophy\ 获奖情况}
 \begin{onehalfspacing}
@@ -33,13 +33,13 @@
 \datedline{大学生数模竞赛校一等奖}{2012年05月}
 \end{onehalfspacing}
 
-\section{\faCogs\ 相关技能}
+\section{\faCogs 相关技能}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{编程语言:}\ \textbf{Java, Android,} (HTML, CSS, JavaScript, MySQL, Python) 
-  \item \textbf{系统平台:}\ Linux, OpenWrt嵌入式系统, Windows
-  \item \textbf{开发工具:}\ Vim, AndroidStudio
-  \item \textbf{英语水平:}\ CET-6 (449)
+  \item \textbf{编程语言:} \textbf{Java, Android,} (HTML, CSS, JavaScript, MySQL, Python) 
+  \item \textbf{系统平台:} Linux, OpenWrt嵌入式系统, Windows
+  \item \textbf{开发工具:} Vim, AndroidStudio
+  \item \textbf{英语水平:} CET-6 (449)
 \end{itemize}
 
 \section{\faUsers\ 项目经历}
@@ -73,11 +73,11 @@
 %  \item main contribution
 %\end{itemize}
 
-\section{\faEnvelopeO\ 其他}
+\section{\faInfo\ 其他}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{LinkedIn:}\ https://www.linkedin.com/in/zhlinh
-  \item \textbf{GitHub:}\ https://github.com/zhlinh
+  \item \textbf{LinkedIn:} https://www.linkedin.com/in/zhlinh
+  \item \textbf{GitHub:} https://github.com/zhlinh
 \end{itemize}
 
 %% Reference
