--- a/resume-elegant-eng.tex
+++ b/resume-elegant-eng.tex
@@ -1,7 +1,7 @@
 % !TEX program = xelatex
 
 \documentclass{resume}
-\usepackage{zh_CN-Adobefonts-External} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobefonts/)
+%\usepackage{zh_CN-Adobefonts-External} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobefonts/)
 %\usepackage{zh_CN-Adobefonts-Internal} % Simplified Chinese Support using system fonts
 \usepackage{linespacing_fix} % disable extra space before next section
 \usepackage{cite} % bibliology
@@ -35,10 +35,10 @@
 \section{\faCogs\ SKILLS}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{Programming Languages:}\ \textbf{Java, Android,} (HTML, CSS, JavaScript, MySQL, Python) 
-  \item \textbf{Platform:}\ Linux, OpenWrt Embedded Systems, Windows
-  \item \textbf{Development Tools:}\ Vim, AndroidStudio
-  \item \textbf{English Level:}\ CET-6 (449)
+  \item \textbf{Programming Languages:} \textbf{Java, Android,} (HTML, CSS, JavaScript, MySQL, Python) 
+  \item \textbf{Platform:} Linux, OpenWrt Embedded Systems, Windows
+  \item \textbf{Development Tools:} Vim, AndroidStudio
+  \item \textbf{English Level:} CET-6 (449)
 \end{itemize}
 
 \section{\faUsers\ EXPERIENCE}
@@ -72,11 +72,11 @@
 %  \item main contribution
 %\end{itemize}
 
-\section{\faEnvelopeO\ MISCELLANEOUS}
+\section{\faInfo\ MISCELLANEOUS}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{LinkedIn:}\ https://www.linkedin.com/in/zhlinh
-  \item \textbf{GitHub:}\ https://github.com/zhlinh
+  \item \textbf{LinkedIn:} https://www.linkedin.com/in/zhlinh
+  \item \textbf{GitHub:} https://github.com/zhlinh
 \end{itemize}
 
 %% Reference
