--- a/resume-elegant-eng.tex
+++ b/resume-elegant-eng.tex
@@ -20,9 +20,9 @@
  
 \section{\faGraduationCap\ EDUCATION}
 \datedsubsection{\textbf{Xidian University}, Xi'an, China}{2014 -- Present}
-\textit{Master student} Communication Engineering, expected June 2017
+\textit{Master student}\ Communication Engineering, expected June 2017
 \datedsubsection{\textbf{Xidian University}, Xi'an, China}{2010 -- 2014}
-\textit{B.S.} Communication Engineering
+\textit{B.S.}\ Communication Engineering
 
 \section{\faTrophy\ HONORS \& AWARDS}
 \begin{onehalfspacing}
@@ -75,8 +75,8 @@
 \section{\faInfo\ MISCELLANEOUS}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{LinkedIn:} https://www.linkedin.com/in/zhlinh
-  \item \textbf{GitHub:} https://github.com/zhlinh
+  \item \textbf{LinkedIn:}\ https://www.linkedin.com/in/zhlinh
+  \item \textbf{GitHub:}\ https://github.com/zhlinh
 \end{itemize}
 
 %% Reference
