--- a/resume-elegant-cn.tex
+++ b/resume-elegant-cn.tex
@@ -22,9 +22,9 @@
  
 \section{\faGraduationCap\ 教育背景}
 \datedsubsection{\textbf{西安电子科技大学}，陕西}{2014年 -- 至今}
-\textit{研究生在读} 电子与通信工程，预计 2017 年 6 月毕业
+\textit{研究生在读}\ 电子与通信工程，预计 2017年6月毕业
 \datedsubsection{\textbf{西安电子科技大学}，陕西}{2010年 -- 2014年}
-\textit{学士} 通信工程
+\textit{学士}\ 通信工程
 
 \section{\faTrophy\ 获奖情况}
 \begin{onehalfspacing}
@@ -76,8 +76,8 @@
 \section{\faInfo\ 其他}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item \textbf{LinkedIn:} https://www.linkedin.com/in/zhlinh
-  \item \textbf{GitHub:} https://github.com/zhlinh
+  \item \textbf{LinkedIn:}\ https://www.linkedin.com/in/zhlinh
+  \item \textbf{GitHub:}\ https://github.com/zhlinh
 \end{itemize}
 
 %% Reference
